Fix work grid spacing

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -148,7 +148,7 @@ p
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 2;
+    z-index: 0;
     pointer-events: none;
 }
 
